--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="./p5.play.js">
     </script>
    
-
+<p>My game</p>
 
     <script src="Player.js"></script>
     <script src="Car.js"></script>
